[package]
name = "pravaha"
version = "0.1.0"
edition = "2024"

[lib]
name = "pravaha"

[dependencies]
ahash = "0.8.12"
curl = { version = "0.4.49", optional = true }
libc = "0.2.180"
lru = "0.16.3"
reqwest = { version = "0.13.2", features = ["blocking"], optional = true }
thiserror = "2.0.18"

[features]
default = ["curl"]

reqwest = ["dep:reqwest"]
curl = ["dep:curl"]

capi = []
