[package]
name = "pravaha"
version = "0.1.1"
edition = "2024"
authors = ["rhythmcache"]
description = "Pravaha lets you read files from HTTP(S) URLs as if they were local files."
repository = "https://github.com/rhythmcache/pravaha"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/rhythmcache/pravaha"
keywords = ["http", "streaming", "file", "range-requests", "cache"]
categories = [
  "filesystem",
  "network-programming",
  "web-programming::http-client",
]

[lib]
name = "pravaha"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
ahash = "0.8.12"
curl = { version = "0.4.49", optional = true }
libc = "0.2.184"
lru = "0.16.3"
reqwest = { version = "0.13.2", features = ["stream"], optional = true }
thiserror = "2.0.18"
tokio = { version = "1.50", features = [
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
] }
tokio-util = { version = "0.7.18", features = ["full"] }
dashmap = "6.1.0"
async-trait = "0.1.89"
futures = "0.3.32"


[build-dependencies]
cbindgen = "0.29.2"

[features]
default = ["curl"]
reqwest = ["dep:reqwest"]
curl = ["dep:curl"]

capi = []
